...
                                        <rect key="frame" x="0.0" y="93.5" width="354" height="130"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MRd-lB-f6y">
                                                <rect key="frame" x="0.0" y="0.0" width="354" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="254" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DUe-vf-Jms">
                                                <rect key="frame" x="0.0" y="47" width="354" height="35"/>
                                                <constraints>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="253" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A3r-0G-yNU">
                                                <rect key="frame" x="0.0" y="95" width="354" height="35"/>
                                                <constraints>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                <state key="normal" title="Log In">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="142" height="41"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Make a Guide"/>
                                        <connections>
                                            <segue destination="FRI-JC-Akd" kind="show" identifier="CreatePostShowSegue" id="k3n-LK-XGK"/>
...
                                        <rect key="frame" x="15.5" y="49" width="111" height="41"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="My Guides"/>
                                        <connections>
                                            <segue destination="aX2-Pl-yZO" kind="show" identifier="UserPostsShowSegue" id="4ch-P4-BXo"/>
...
                                        <rect key="frame" x="25.5" y="98" width="91" height="41"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Sign Out"/>
                                        <connections>
                                            <segue destination="A9H-4M-GU7" kind="unwind" unwindAction="landingUnwindWithUnwindSegue:" id="1lX-8v-xW5"/>
...
                                <rect key="frame" x="147" y="636" width="120" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Create Post"/>
                                <connections>
                                    <segue destination="EIV-lj-PHx" kind="unwind" unwindAction="mainMenuUnwindWithUnwindSegue:" id="RZA-KA-l2I"/>
...
